defconfig: `imx8mp_defconfig`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/imx8mp_defconfig
+++ b/defconfig/imx8mp_defconfig
@@ -57,7 +57,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPUFREQ_DT=y
-CONFIG_ARM_SCPI_CPUFREQ=y
+CONFIG_ARM_SCPI_CPUFREQ=m
 CONFIG_ARM_IMX6Q_CPUFREQ=m
 CONFIG_ARM_IMX_CPUFREQ_DT=y
 CONFIG_ARM_SCMI_CPUFREQ=y
@@ -176,7 +176,9 @@ CONFIG_BT_HCIUART_LL=y
 CONFIG_BT_HCIUART_RTL=y
 CONFIG_BT_HCIUART_MRVL=y
 CONFIG_BT_HCIVHCI=m
+CONFIG_CFG80211=m
 CONFIG_NL80211_TESTMODE=y
+CONFIG_CFG80211_WEXT=y
 CONFIG_MAC80211=m
 CONFIG_MAC80211_LEDS=y
 CONFIG_RFKILL=m
@@ -306,14 +308,14 @@ CONFIG_VIRTIO_NET=y
 # CONFIG_NET_VENDOR_EMULEX is not set
 # CONFIG_NET_VENDOR_ENGLEDER is not set
 # CONFIG_NET_VENDOR_EZCHIP is not set
-CONFIG_FEC=y
-CONFIG_FSL_FMAN=y
-CONFIG_GIANFAR=y
-CONFIG_FSL_DPAA_ETH=y
-CONFIG_FSL_DPAA2_ETH=y
-CONFIG_FSL_DPAA2_SWITCH=y
-CONFIG_FSL_ENETC=y
-CONFIG_FSL_ENETC_VF=y
+CONFIG_FEC=m
+CONFIG_FSL_FMAN=m
+CONFIG_GIANFAR=m
+CONFIG_FSL_DPAA_ETH=m
+CONFIG_FSL_DPAA2_ETH=m
+CONFIG_FSL_DPAA2_SWITCH=m
+CONFIG_FSL_ENETC=m
+CONFIG_FSL_ENETC_VF=m
 CONFIG_FSL_ENETC_QOS=y
 # CONFIG_NET_VENDOR_FUNGIBLE is not set
 # CONFIG_NET_VENDOR_GOOGLE is not set
@@ -359,11 +361,12 @@ CONFIG_R8169=m
 # CONFIG_NET_VENDOR_SMSC is not set
 # CONFIG_NET_VENDOR_SOCIONEXT is not set
 CONFIG_STMMAC_ETH=y
-CONFIG_DWMAC_DWC_QOS_ETH=y
+CONFIG_STMMAC_PLATFORM=m
+CONFIG_DWMAC_DWC_QOS_ETH=m
 # CONFIG_DWMAC_GENERIC is not set
-CONFIG_DWMAC_IMX8=m
 # CONFIG_NET_VENDOR_SUN is not set
-# CONFIG_NET_VENDOR_SYNOPSYS is not set
+CONFIG_DWC_XLGMAC=m
+CONFIG_DWC_XLGMAC_PCI=m
 # CONFIG_NET_VENDOR_TEHUTI is not set
 # CONFIG_NET_VENDOR_TI is not set
 # CONFIG_NET_VENDOR_VERTEXCOM is not set
@@ -385,12 +388,12 @@ CONFIG_STE10XP=m
 CONFIG_PSE_CONTROLLER=y
 CONFIG_PSE_REGULATOR=m
 CONFIG_CAN_FLEXCAN=m
-CONFIG_MDIO_BITBANG=y
-CONFIG_MDIO_GPIO=y
+CONFIG_MDIO_BITBANG=m
+CONFIG_MDIO_GPIO=m
 CONFIG_MDIO_MVUSB=m
-CONFIG_MDIO_BUS_MUX_GPIO=y
-CONFIG_MDIO_BUS_MUX_MULTIPLEXER=y
-CONFIG_MDIO_BUS_MUX_MMIOREG=y
+CONFIG_MDIO_BUS_MUX_GPIO=m
+CONFIG_MDIO_BUS_MUX_MULTIPLEXER=m
+CONFIG_MDIO_BUS_MUX_MMIOREG=m
 CONFIG_USB_PEGASUS=m
 CONFIG_USB_RTL8150=m
 CONFIG_USB_RTL8152=y
@@ -441,11 +444,11 @@ CONFIG_USB_NET_RNDIS_WLAN=m
 CONFIG_MAC80211_HWSIM=m
 CONFIG_VIRT_WIFI=m
 CONFIG_XEN_NETDEV_BACKEND=m
+CONFIG_INPUT_MATRIXKMAP=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_ADC=m
 CONFIG_KEYBOARD_SNVS_PWRKEY=y
 CONFIG_KEYBOARD_IMX_SC_KEY=y
-CONFIG_KEYBOARD_CROS_EC=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_PWM_BEEPER=m
 CONFIG_INPUT_PWM_VIBRA=m
@@ -518,7 +521,6 @@ CONFIG_PINCTRL_IMXRT1050=y
 CONFIG_PINCTRL_IMX93=y
 CONFIG_PINCTRL_IMXRT1170=y
 CONFIG_PINCTRL_S32G2=y
-CONFIG_GPIOLIB=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_CADENCE=m
 CONFIG_GPIO_DWAPB=m
@@ -665,17 +667,18 @@ CONFIG_REGULATOR_ANATOP=y
 CONFIG_REGULATOR_ARM_SCMI=m
 CONFIG_REGULATOR_AS3711=m
 CONFIG_REGULATOR_AS3722=m
-CONFIG_REGULATOR_AXP20X=y
-CONFIG_REGULATOR_BD718XX=y
-CONFIG_REGULATOR_BD9571MWV=y
-CONFIG_REGULATOR_FAN53555=y
-CONFIG_REGULATOR_FAN53880=y
-CONFIG_REGULATOR_HI6421V530=y
-CONFIG_REGULATOR_MAX77620=y
+CONFIG_REGULATOR_AXP20X=m
+CONFIG_REGULATOR_BD718XX=m
+CONFIG_REGULATOR_BD9571MWV=m
+CONFIG_REGULATOR_FAN53555=m
+CONFIG_REGULATOR_FAN53880=m
+CONFIG_REGULATOR_GPIO=y
+CONFIG_REGULATOR_HI6421V530=m
+CONFIG_REGULATOR_MAX77620=m
 CONFIG_REGULATOR_MAX8973=y
 CONFIG_REGULATOR_MC13783=y
 CONFIG_REGULATOR_MC13892=y
-CONFIG_REGULATOR_MP8859=y
+CONFIG_REGULATOR_MP8859=m
 CONFIG_REGULATOR_MP886X=m
 CONFIG_REGULATOR_MT6358=y
 CONFIG_REGULATOR_MT6397=y
@@ -684,8 +687,9 @@ CONFIG_REGULATOR_PCF50633=y
 CONFIG_REGULATOR_PF8X00=y
 CONFIG_REGULATOR_PFUZE100=y
 CONFIG_REGULATOR_PWM=y
-CONFIG_REGULATOR_QCOM_SPMI=y
-CONFIG_REGULATOR_S2MPS11=y
+CONFIG_REGULATOR_QCOM_SPMI=m
+CONFIG_REGULATOR_S2MPS11=m
+CONFIG_REGULATOR_STPMIC1=m
 CONFIG_REGULATOR_VCTRL=y
 CONFIG_HID_A4TECH=y
 CONFIG_HID_APPLE=y
@@ -817,6 +821,7 @@ CONFIG_LEDS_TRIGGER_PANIC=y
 CONFIG_EDAC=y
 CONFIG_EDAC_LAYERSCAPE=y
 CONFIG_EDAC_SYNOPSYS=y
+CONFIG_EDAC_DMC520=m
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_DS1307=m
 CONFIG_RTC_DRV_DS1307_CENTURY=y
@@ -848,7 +853,6 @@ CONFIG_RTC_DRV_DS1685_FAMILY=m
 CONFIG_RTC_DRV_DS1742=m
 CONFIG_RTC_DRV_DS2404=m
 CONFIG_RTC_DRV_EFI=y
-CONFIG_RTC_DRV_CROS_EC=y
 CONFIG_RTC_DRV_IMXDI=m
 CONFIG_RTC_DRV_FSL_FTM_ALARM=m
 CONFIG_RTC_DRV_PL030=m
@@ -861,41 +865,36 @@ CONFIG_RTC_DRV_IMX_SC=y
 CONFIG_RTC_DRV_MT6397=m
 CONFIG_DMADEVICES=y
 CONFIG_BCM_SBA_RAID=m
-CONFIG_FSL_EDMA=y
-CONFIG_FSL_QDMA=y
-CONFIG_IMX_DMA=y
-CONFIG_IMX_SDMA=y
+CONFIG_DW_AXI_DMAC=m
+CONFIG_FSL_EDMA=m
+CONFIG_FSL_QDMA=m
+CONFIG_IMX_DMA=m
+CONFIG_IMX_SDMA=m
 CONFIG_MV_XOR_V2=y
 CONFIG_MXS_DMA=y
-CONFIG_PL330_DMA=y
-CONFIG_QCOM_HIDMA_MGMT=y
-CONFIG_QCOM_HIDMA=y
+CONFIG_PL330_DMA=m
 CONFIG_DW_DMAC=m
 CONFIG_DW_DMAC_PCI=m
 CONFIG_DW_EDMA=m
+CONFIG_DW_EDMA_PCIE=m
 CONFIG_FSL_DPAA2_QDMA=y
+CONFIG_DMATEST=m
 CONFIG_SYNC_FILE=y
+CONFIG_UDMABUF=y
 CONFIG_DMABUF_HEAPS=y
 CONFIG_DMABUF_HEAPS_SYSTEM=y
 CONFIG_DMABUF_HEAPS_CMA=y
 CONFIG_UIO=m
 CONFIG_UIO_PDRV_GENIRQ=m
 CONFIG_UIO_DMEM_GENIRQ=m
-CONFIG_VFIO=y
-CONFIG_VFIO_PCI=y
-CONFIG_VFIO_FSL_MC=y
+CONFIG_VFIO=m
+CONFIG_VFIO_PCI=m
+CONFIG_VFIO_FSL_MC=m
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_VHOST_MENU is not set
 CONFIG_XEN_GNTDEV=y
 CONFIG_XEN_GRANT_DEV_ALLOC=y
 CONFIG_STAGING=y
-CONFIG_PRISM2_USB=m
-CONFIG_RTL8192U=m
-CONFIG_RTLLIB=m
-CONFIG_RTL8192E=m
-CONFIG_RTL8723BS=m
-CONFIG_R8712U=m
-CONFIG_RTS5208=m
 CONFIG_ADIS16203=m
 CONFIG_ADIS16240=m
 CONFIG_AD7816=m
@@ -905,34 +904,33 @@ CONFIG_AD9832=m
 CONFIG_AD9834=m
 CONFIG_AD5933=m
 CONFIG_AD2S1210=m
-CONFIG_CHROME_PLATFORMS=y
-CONFIG_CROS_EC=y
-CONFIG_CROS_EC_I2C=y
-CONFIG_CROS_EC_SPI=y
-CONFIG_CROS_EC_CHARDEV=m
 CONFIG_CLK_VEXPRESS_OSC=y
-CONFIG_COMMON_CLK_SCMI=y
-CONFIG_COMMON_CLK_SCPI=y
-CONFIG_COMMON_CLK_CS2000_CP=y
+CONFIG_COMMON_CLK_SCMI=m
+CONFIG_COMMON_CLK_SCPI=m
+# CONFIG_COMMON_CLK_FSL_FLEXSPI is not set
 CONFIG_COMMON_CLK_FSL_SAI=y
 CONFIG_COMMON_CLK_S2MPS11=y
+CONFIG_COMMON_CLK_AXI_CLKGEN=y
 CONFIG_COMMON_CLK_XGENE=y
 CONFIG_COMMON_CLK_PWM=y
 CONFIG_COMMON_CLK_VC5=y
-CONFIG_CLK_IMX8MM=y
-CONFIG_CLK_IMX8MN=y
+CONFIG_COMMON_CLK_FIXED_MMIO=y
+CONFIG_CLK_IMX8MM=m
+CONFIG_CLK_IMX8MN=m
 CONFIG_CLK_IMX8MP=y
-CONFIG_CLK_IMX8MQ=y
-CONFIG_CLK_IMX8QXP=y
-CONFIG_CLK_IMX8ULP=y
-CONFIG_CLK_IMX93=y
-CONFIG_HWSPINLOCK=y
+CONFIG_CLK_IMX8MQ=m
+CONFIG_CLK_IMX8QXP=m
+CONFIG_CLK_IMX8ULP=m
+CONFIG_CLK_IMX93=m
 CONFIG_ARM_MHU=y
 CONFIG_IMX_MBOX=y
 CONFIG_PLATFORM_MHU=y
 CONFIG_IOMMU_IO_PGTABLE_ARMV7S=y
+CONFIG_IOMMUFD=m
 CONFIG_ARM_SMMU=y
+CONFIG_ARM_SMMU_LEGACY_DT_BINDINGS=y
 CONFIG_ARM_SMMU_V3=y
+CONFIG_REMOTEPROC=y
 CONFIG_IMX_REMOTEPROC=y
 CONFIG_IMX_DSP_REMOTEPROC=m
 CONFIG_RPMSG_CHAR=m
@@ -940,19 +938,20 @@ CONFIG_RPMSG_CTRL=m
 CONFIG_RPMSG_QCOM_GLINK_RPM=y
 CONFIG_SOC_BRCMSTB=y
 CONFIG_FSL_DPAA=y
+CONFIG_FSL_DPAA_CHECKING=y
 CONFIG_QUICC_ENGINE=y
 CONFIG_FSL_MC_DPIO=y
 CONFIG_FSL_RCPM=y
-CONFIG_SOC_TI=y
+CONFIG_SOC_IMX9=m
 CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_DEVFREQ_GOV_POWERSAVE=y
 CONFIG_DEVFREQ_GOV_PASSIVE=y
 CONFIG_ARM_IMX_BUS_DEVFREQ=y
 CONFIG_ARM_IMX8M_DDRC_DEVFREQ=y
 CONFIG_PM_DEVFREQ_EVENT=y
-CONFIG_EXTCON_GPIO=m
+CONFIG_EXTCON_GPIO=y
 CONFIG_EXTCON_PTN5150=y
-CONFIG_EXTCON_USBC_CROS_EC=y
+CONFIG_EXTCON_USB_GPIO=m
 CONFIG_ARM_PL172_MPMC=m
 CONFIG_IIO=y
 CONFIG_IIO_BUFFER_CB=m
@@ -961,53 +960,66 @@ CONFIG_IIO_BUFFER_HW_CONSUMER=m
 CONFIG_IIO_SW_DEVICE=m
 CONFIG_IIO_SW_TRIGGER=m
 CONFIG_IIO_TRIGGERED_EVENT=m
-CONFIG_FXLS8962AF_I2C=m
+CONFIG_FXLS8962AF_I2C=y
+CONFIG_FXLS8962AF_SPI=y
+CONFIG_MMA7455_I2C=m
+CONFIG_MMA7455_SPI=m
+CONFIG_MMA7660=m
+CONFIG_MMA8452=m
+CONFIG_MMA9551=m
+CONFIG_MMA9553=m
 CONFIG_IMX8QXP_ADC=y
 CONFIG_IMX93_ADC=y
 CONFIG_MAX9611=m
 CONFIG_QCOM_SPMI_VADC=m
 CONFIG_QCOM_SPMI_ADC5=m
-CONFIG_IIO_CROS_EC_SENSORS_CORE=m
-CONFIG_IIO_CROS_EC_SENSORS=m
+CONFIG_VF610_ADC=m
+CONFIG_AD74115=m
+CONFIG_AD74413R=m
+CONFIG_IIO_RESCALE=m
 CONFIG_IIO_SCMI=m
 CONFIG_FXAS21002C=y
+CONFIG_IIO_ST_GYRO_3AXIS=m
 CONFIG_AFE4403=m
 CONFIG_AFE4404=m
 CONFIG_MAX30100=m
 CONFIG_MAX30102=m
 CONFIG_FXOS8700_I2C=y
+CONFIG_FXOS8700_SPI=y
 CONFIG_IIO_ST_LSM6DSX=y
-CONFIG_IIO_CROS_EC_LIGHT_PROX=m
+CONFIG_IIO_ST_LSM9DS0=m
 CONFIG_SENSORS_ISL29018=y
 CONFIG_VCNL4000=m
-CONFIG_IIO_ST_MAGN_3AXIS=m
+CONFIG_MAG3110=m
 CONFIG_IIO_MUX=m
-CONFIG_IIO_CROS_EC_BARO=m
+CONFIG_IIO_SYSFS_TRIGGER=m
 CONFIG_DLHL60D=m
 CONFIG_MPL115_I2C=y
 CONFIG_MPL115_SPI=y
 CONFIG_MPL3115=y
 CONFIG_IIO_ST_PRESS=m
 CONFIG_PWM=y
-CONFIG_PWM_CLK=m
-CONFIG_PWM_CROS_EC=m
+CONFIG_PWM_CLK=y
 CONFIG_PWM_DWC=m
-CONFIG_PWM_FSL_FTM=m
-CONFIG_PWM_IMX1=m
+CONFIG_PWM_FSL_FTM=y
+CONFIG_PWM_IMX1=y
 CONFIG_PWM_IMX27=y
-CONFIG_PWM_IMX_TPM=m
-CONFIG_PWM_PCA9685=m
-CONFIG_PWM_SL28CPLD=m
-CONFIG_SL28CPLD_INTC=y
+CONFIG_PWM_IMX_TPM=y
+CONFIG_PWM_PCA9685=y
 CONFIG_IMX_MU_MSI=y
+CONFIG_IPACK_BUS=m
+CONFIG_BOARD_TPCI200=m
+CONFIG_SERIAL_IPOCTAL=m
 CONFIG_RESET_IMX7=y
 CONFIG_RESET_SCMI=m
 CONFIG_RESET_SIMPLE=y
+CONFIG_RESET_TI_SYSCON=m
+CONFIG_RESET_TI_TPS380X=m
 CONFIG_PHY_CAN_TRANSCEIVER=m
 CONFIG_BCM_KONA_USB2_PHY=m
 CONFIG_PHY_FSL_IMX8MQ_USB=m
-CONFIG_PHY_FSL_IMX8M_PCIE=y
-CONFIG_PHY_FSL_LYNX_28G=y
+CONFIG_PHY_FSL_IMX8M_PCIE=m
+CONFIG_PHY_FSL_LYNX_28G=m
 CONFIG_PHY_PXA_28NM_HSIC=m
 CONFIG_PHY_PXA_28NM_USB2=m
 CONFIG_ARM_CCI_PMU=m
@@ -1016,8 +1028,9 @@ CONFIG_ARM_CMN=m
 CONFIG_ARM_SMMU_V3_PMU=m
 CONFIG_ARM_DSU_PMU=m
 CONFIG_FSL_IMX8_DDR_PMU=y
-CONFIG_FSL_IMX9_DDR_PMU=y
+CONFIG_FSL_IMX9_DDR_PMU=m
 CONFIG_ARM_SPE_PMU=m
+CONFIG_ARM_CORESIGHT_PMU_ARCH_SYSTEM_PMU=m
 CONFIG_LIBNVDIMM=y
 CONFIG_DEV_DAX=m
 CONFIG_NVMEM_IMX_IIM=m
@@ -1054,8 +1067,6 @@ CONFIG_INTERCONNECT_IMX8MQ=y
 CONFIG_INTERCONNECT_IMX8MP=y
 CONFIG_COUNTER=y
 CONFIG_INTERRUPT_CNT=m
-CONFIG_CDX_BUS=y
-CONFIG_CDX_CONTROLLER=m
 CONFIG_VALIDATE_FS_PARSER=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
