defconfig: `imx8mp_defconfig`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/imx8mp_defconfig
+++ b/defconfig/imx8mp_defconfig
@@ -572,7 +572,7 @@ CONFIG_PINCTRL_IMX8QXP=y
 CONFIG_PINCTRL_IMX8DXL=y
 CONFIG_PINCTRL_IMX8ULP=y
 CONFIG_PINCTRL_IMXRT1050=y
-CONFIG_PINCTRL_IMX93=y
+CONFIG_PINCTRL_IMX93=m
 CONFIG_PINCTRL_IMXRT1170=y
 CONFIG_PINCTRL_S32G2=y
 CONFIG_GPIO_SYSFS=y
@@ -734,7 +734,7 @@ CONFIG_REGULATOR_MC13783=y
 CONFIG_REGULATOR_MC13892=y
 CONFIG_REGULATOR_MP8859=m
 CONFIG_REGULATOR_MP886X=m
-CONFIG_REGULATOR_MT6358=y
+CONFIG_REGULATOR_MT6358=m
 CONFIG_REGULATOR_MT6397=y
 CONFIG_REGULATOR_PCA9450=y
 CONFIG_REGULATOR_PCF50633=y
@@ -996,7 +996,7 @@ CONFIG_FSL_DPAA_CHECKING=y
 CONFIG_QUICC_ENGINE=y
 CONFIG_FSL_MC_DPIO=y
 CONFIG_FSL_RCPM=y
-CONFIG_SOC_IMX9=m
+# CONFIG_SOC_IMX9 is not set
 CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_DEVFREQ_GOV_POWERSAVE=y
 CONFIG_DEVFREQ_GOV_PASSIVE=y
