--- a/defconfig/imx8mp_defconfig
+++ b/defconfig/imx8mp_defconfig
@@ -67,6 +67,8 @@ CONFIG_KVM=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODVERSIONS=y
+CONFIG_MODULE_SIG=y
+CONFIG_MODULE_COMPRESS_XZ=y
 CONFIG_BLK_DEV_INTEGRITY=y
 CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_BLK_CGROUP_IOLATENCY=y
@@ -411,7 +413,6 @@ CONFIG_BT_BNEP=m
 CONFIG_BT_BNEP_MC_FILTER=y
 CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=m
-CONFIG_BT_HS=y
 CONFIG_BT_LEDS=y
 CONFIG_BT_HCIBTUSB=m
 CONFIG_BT_HCIBTSDIO=m
@@ -463,7 +464,6 @@ CONFIG_NFC_S3FWRN5_I2C=m
 CONFIG_NFC_S3FWRN82_UART=m
 CONFIG_NFC_ST95HF=m
 CONFIG_LWTUNNEL=y
-CONFIG_FAILOVER=m
 CONFIG_PCI=y
 CONFIG_PCIEPORTBUS=y
 CONFIG_PCI_IOV=y
@@ -586,7 +586,6 @@ CONFIG_FSL_DPAA2_ETH=m
 CONFIG_FSL_DPAA2_SWITCH=m
 CONFIG_FSL_ENETC=m
 CONFIG_FSL_ENETC_VF=m
-CONFIG_FSL_ENETC_QOS=y
 # CONFIG_NET_VENDOR_FUNGIBLE is not set
 # CONFIG_NET_VENDOR_GOOGLE is not set
 # CONFIG_NET_VENDOR_HISILICON is not set
@@ -656,7 +655,6 @@ CONFIG_NXP_TJA11XX_PHY=m
 CONFIG_STE10XP=m
 CONFIG_PSE_CONTROLLER=y
 CONFIG_PSE_REGULATOR=m
-CONFIG_CAN_FLEXCAN=m
 CONFIG_MDIO_BITBANG=m
 CONFIG_MDIO_GPIO=m
 CONFIG_MDIO_MVUSB=m
@@ -1383,18 +1381,17 @@ CONFIG_NFS_V4=y
 CONFIG_NFS_V4_1=y
 CONFIG_NFS_V4_2=y
 CONFIG_ROOT_NFS=y
-CONFIG_9P_FS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_TRUSTED_KEYS=m
 # CONFIG_TRUSTED_KEYS_TPM is not set
+CONFIG_ENCRYPTED_KEYS=m
+CONFIG_KEY_DH_OPERATIONS=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_APPARMOR=y
 CONFIG_LSM="landlock,lockdown,yama,loadpin,safesetid,bpf"
 CONFIG_CRYPTO_USER=y
 CONFIG_CRYPTO_TEST=m
-CONFIG_CRYPTO_DH=m
-CONFIG_CRYPTO_ECDH=y
 CONFIG_CRYPTO_CURVE25519=m
 CONFIG_CRYPTO_ANUBIS=m
 CONFIG_CRYPTO_ARIA=m
@@ -1411,14 +1408,11 @@ CONFIG_CRYPTO_TWOFISH=m
 CONFIG_CRYPTO_ARC4=m
 CONFIG_CRYPTO_CFB=m
 CONFIG_CRYPTO_CTS=m
-CONFIG_CRYPTO_ECB=y
 CONFIG_CRYPTO_LRW=m
 CONFIG_CRYPTO_OFB=m
 CONFIG_CRYPTO_PCBC=m
 CONFIG_CRYPTO_CHACHA20POLY1305=m
 CONFIG_CRYPTO_CCM=y
-CONFIG_CRYPTO_ECHAINIV=y
-CONFIG_CRYPTO_CMAC=y
 CONFIG_CRYPTO_MD4=m
 CONFIG_CRYPTO_MICHAEL_MIC=y
 CONFIG_CRYPTO_RMD160=m
