--- a/lib/function/config
+++ b/lib/function/config
@@ -68,7 +68,7 @@ cat <<EOF > "profile.txt"
 #NAME="$MYNAME"
 #USERNAME="$USER"
 #PASSWORD="board"
-#VERSION="$LTS2"
+#VERSION="6.6.y"
 #CCACHE="$CCACHE"
 #NETWORKMANAGER="$NETWORKMANAGER"
 #RTW88="$RTW88"
@@ -84,5 +84,4 @@ cat <<EOF > "profile.txt"
 ### DO NOT EDIT BELOW THIS LINE
 USER_PROFILE="$PROFILE"
 EOF
-sed -i "s/^#VERSION=.*/#VERSION="'"$LTS2"'"/" profile.txt
 }
