`Debian Image Builder`
If the user does not choose a specific compiler version the
builder will choose one for you based on the HOST defaults.

builder: 6.7
profile: 1.2
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/lib/function/config
+++ b/lib/function/config
@@ -69,6 +69,7 @@ cat <<EOF > "profile.txt"
 #USERNAME="$USER"
 #PASSWORD="board"
 #VERSION="6.6.y"
+#COMPILER="gcc"
 #CCACHE="$CCACHE"
 #NETWORKMANAGER="$NETWORKMANAGER"
 #RTW88="$RTW88"
