--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -2,8 +2,8 @@
 
 source lib/function/config
 # builder and profile versions
-BUILDER="6.6"
-PROFILE="1.1"
+BUILDER="6.7"
+PROFILE="1.2"
 
 # depends
 if [[ `command -v curl` ]]; then :; else sudo apt install curl; fi
@@ -14,9 +14,7 @@ else
 	exit 0
 fi
 
-# dynamic variables
-GCC=`ls -ls /usr/bin/gcc | sed 's/.*\(..\)/\1/' | sed 's/ //g'`
-if [[ "$GCC" == "cc" ]]; then GCC="11"; fi
+# dynamic variable
 MYNAME=`echo $USER | sed -e "s/\b\(.\)/\u\1/g"`
 
 # userdata dot txt
@@ -24,6 +22,7 @@ NAME="$MYNAME"
 USERNAME="$USER"
 PASSWORD="board"
 VERSION="6.6.y"
+COMPILER="gcc"
 CCACHE="1"
 NETWORKMANAGER="1"
 RTW88="1"
@@ -49,7 +48,6 @@ DISTRO_VERSION="bookworm"
 UBOOT_VERSION="v2024.01"
 BUILD_VERSION="1"
 MENUCONFIG="0"
-COMPILER="gcc-$GCC"
 CUSTOM_DEFCONFIG="0"
 MYCONFIG=""
 LOGGING="1"
