--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -26,6 +26,7 @@ CONFIG_NAMESPACES=y
 CONFIG_USER_NS=y
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_BOOT_CONFIG=y
+CONFIG_EXPERT=y
 CONFIG_SGETMASK_SYSCALL=y
 CONFIG_EMBEDDED=y
 CONFIG_PROFILING=y
