rootfs: MMDEBSTRAP="true"
custom.txt: if false use debootstrap

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/lib/function/config
+++ b/lib/function/config
@@ -16,6 +16,9 @@ ENABLE_EFI="false"
 # Petitboot (AML ODROID) (not recommended)
 ENABLE_PETITBOOT="false"
 
+# Bootstrap: if false use debootstrap
+MMDEBSTRAP="true"
+
 # Image Size: 3584MB 4096MB
 IMGSIZE="4096MB"
 
