apt mirrors: `change apt mirror via mirror.txt`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -2,7 +2,7 @@
 
 source lib/function/config
 # builder and profile versions
-BUILDER="6.8"
+BUILDER="6.9"
 PROFILE="1.2"
 
 # depends
@@ -175,6 +175,14 @@ if [[ -f "kernel.txt" ]]; then
 	if [[ "$KERNEL_PREFERENCES" == "$BUILDER" ]]; then :; else kernel_txt; fi
 else
 	kernel_txt
+fi
+
+# rootfs / image mirrors
+if [[ -f "mirror.txt" ]]; then
+	. mirror.txt
+	if [[ "$MIRROR_LIST" == "$BUILDER" ]]; then :; else mirror_txt; fi
+else
+	mirror_txt
 fi
 
 # clear screen
