--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -1,4 +1,5 @@
-# CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_COMPILE_TEST=y
+# CONFIG_WERROR is not set
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_NO_HZ_IDLE=y
@@ -46,7 +47,6 @@ CONFIG_SPACEMIT_K1X_CPUFREQ=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=m
 CONFIG_GCOV_KERNEL=y
-CONFIG_GCOV_PROFILE_ALL=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_COMPRESS_XZ=y
@@ -64,7 +64,6 @@ CONFIG_BINFMT_MISC=m
 CONFIG_ZSWAP=y
 CONFIG_ZSWAP_DEFAULT_ON=y
 CONFIG_Z3FOLD=m
-CONFIG_ZSMALLOC=m
 CONFIG_ZSMALLOC_STAT=y
 CONFIG_SHUFFLE_PAGE_ALLOCATOR=y
 CONFIG_PAGE_REPORTING=y
@@ -223,25 +222,37 @@ CONFIG_RFKILL=y
 # CONFIG_ETHTOOL_NETLINK is not set
 CONFIG_PCI=y
 CONFIG_PCIEPORTBUS=y
+CONFIG_HOTPLUG_PCI_PCIE=y
 CONFIG_PCIEAER=y
+CONFIG_HOTPLUG_PCI=y
+CONFIG_HOTPLUG_PCI_CPCI=y
+CONFIG_HOTPLUG_PCI_SHPC=y
+CONFIG_PCI_HOST_GENERIC=m
+CONFIG_PCIE_DW_PLAT_HOST=y
+CONFIG_PCIE_SPACEMIT=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_EXTRA_FIRMWARE="esos.elf"
 CONFIG_EXTRA_FIRMWARE_DIR="firmware"
 CONFIG_FW_LOADER_COMPRESS=y
-CONFIG_FIRMWARE_MEMMAP=y
+CONFIG_FW_LOADER_COMPRESS_ZSTD=y
 CONFIG_ARM_SCMI_PROTOCOL=y
 # CONFIG_ARM_SCMI_POWER_DOMAIN is not set
+CONFIG_FIRMWARE_MEMMAP=y
 CONFIG_MTD=y
 CONFIG_MTD_BLOCK=y
 CONFIG_MTD_SPI_NAND=y
 CONFIG_MTD_SPI_NOR=y
+CONFIG_OF_OVERLAY=y
 CONFIG_ZRAM=m
 CONFIG_ZRAM_MEMORY_TRACKING=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_VIRTIO_BLK=y
 CONFIG_BLK_DEV_NVME=y
+CONFIG_NVME_MULTIPATH=y
 CONFIG_NVME_VERBOSE_ERRORS=y
+CONFIG_NVME_TARGET=m
+CONFIG_NVME_TARGET_PASSTHRU=y
 CONFIG_SRAM=y
 CONFIG_EEPROM_AT24=y
 CONFIG_BLK_DEV_SD=y
@@ -395,7 +406,6 @@ CONFIG_CPU_THERMAL=y
 CONFIG_K1X_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_SPACEMIT_WATCHDOG=y
-CONFIG_MFD_SYSCON=y
 CONFIG_MFD_SPACEMIT_PMIC=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_SPACEMIT=y
@@ -773,11 +783,8 @@ CONFIG_DMA_CMA=y
 CONFIG_PRINTK_TIME=y
 CONFIG_CONSOLE_LOGLEVEL_DEFAULT=8
 CONFIG_CONSOLE_LOGLEVEL_QUIET=8
-# CONFIG_DYNAMIC_DEBUG= is not set
-# CONFIG_DEBUG_INFO_DWARF_TOOLCHAIN_DEFAULT= is not set
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_DETECT_HUNG_TASK=y
 CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=60
-# CONFIG_DEBUG_ATOMIC_SLEEP= is not set
 # CONFIG_RCU_TRACE is not set
 # CONFIG_RUNTIME_TESTING_MENU is not set
