--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -473,16 +473,34 @@ CONFIG_ZRAM=m
 CONFIG_ZRAM_MEMORY_TRACKING=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_VIRTIO_BLK=y
-CONFIG_BLK_DEV_NVME=y
+CONFIG_BLK_DEV_NVME=m
 CONFIG_NVME_MULTIPATH=y
-CONFIG_NVME_VERBOSE_ERRORS=y
+CONFIG_NVME_HWMON=y
 CONFIG_NVME_TARGET=m
 CONFIG_NVME_TARGET_PASSTHRU=y
+CONFIG_NVME_TARGET_LOOP=m
+CONFIG_DUMMY_IRQ=m
+CONFIG_ENCLOSURE_SERVICES=m
 CONFIG_SRAM=y
 CONFIG_EEPROM_AT24=y
+CONFIG_MISC_RTSX_PCI=m
+CONFIG_MISC_RTSX_USB=m
+CONFIG_RAID_ATTRS=m
 CONFIG_BLK_DEV_SD=y
+CONFIG_CHR_DEV_ST=m
+CONFIG_BLK_DEV_SR=m
+CONFIG_CHR_DEV_SG=m
 # CONFIG_BLK_DEV_BSG is not set
-# CONFIG_SCSI_LOWLEVEL is not set
+CONFIG_CHR_DEV_SCH=m
+CONFIG_SCSI_ENCLOSURE=m
+CONFIG_SCSI_SCAN_ASYNC=y
+CONFIG_ISCSI_TCP=m
+CONFIG_ISCSI_BOOT_SYSFS=m
+CONFIG_SCSI_DH=y
+CONFIG_SCSI_DH_RDAC=m
+CONFIG_SCSI_DH_HP_SW=m
+CONFIG_SCSI_DH_EMC=m
+CONFIG_SCSI_DH_ALUA=m
 CONFIG_ATA=y
 CONFIG_SATA_AHCI=y
 CONFIG_MD=y
@@ -568,7 +586,6 @@ CONFIG_K1X_EMAC=y
 # CONFIG_NET_VENDOR_WIZNET is not set
 # CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_REALTEK_PHY=y
-CONFIG_CAN_FLEXCAN=y
 CONFIG_USB_RTL8152=m
 CONFIG_USB_USBNET=y
 # CONFIG_USB_NET_AX8817X is not set
@@ -612,7 +629,6 @@ CONFIG_SERIAL_PXA_SPACEMIT_K1X=y
 CONFIG_SERIAL_PXA_CONSOLE=y
 CONFIG_SERIAL_DEV_BUS=y
 CONFIG_VIRTIO_CONSOLE=y
-# CONFIG_HW_RANDOM is not set
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_SPACEMIT_K1X=y
 CONFIG_I2C_SLAVE=y
@@ -626,8 +642,25 @@ CONFIG_PINCTRL_SPACEMIT_PMIC=y
 CONFIG_PINCTRL_SINGLE=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_K1X=y
-# CONFIG_HWMON is not set
-CONFIG_THERMAL=y
+CONFIG_POWER_RESET=y
+CONFIG_POWER_RESET_KEYSTONE=y
+CONFIG_POWER_SUPPLY=y
+CONFIG_SENSORS_DRIVETEMP=m
+CONFIG_SENSORS_GPIO_FAN=y
+CONFIG_PMBUS=m
+CONFIG_SENSORS_PWM_FAN=y
+CONFIG_SENSORS_DME1737=m
+CONFIG_SENSORS_EMC1403=m
+CONFIG_SENSORS_EMC2103=m
+CONFIG_SENSORS_EMC2305=m
+CONFIG_SENSORS_EMC6W201=m
+CONFIG_SENSORS_SMSC47M1=m
+CONFIG_SENSORS_SMSC47M192=m
+CONFIG_SENSORS_SMSC47B397=m
+CONFIG_SENSORS_SCH5627=m
+CONFIG_SENSORS_SCH5636=m
+CONFIG_SENSORS_STTS751=m
+CONFIG_SENSORS_TC74=m
 CONFIG_CPU_THERMAL=y
 CONFIG_K1X_THERMAL=y
 CONFIG_WATCHDOG=y
@@ -888,7 +921,6 @@ CONFIG_MMC_SDHCI_OF_K1X=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_GPIO=y
-CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_TIMER=y
 CONFIG_LEDS_TRIGGER_ONESHOT=y
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
