--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -5,7 +5,6 @@ CONFIG_POSIX_MQUEUE=y
 CONFIG_NO_HZ_IDLE=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_BPF_SYSCALL=y
-CONFIG_PREEMPT=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_CGROUPS=y
@@ -536,11 +535,14 @@ CONFIG_TARGET_CORE=y
 CONFIG_TCM_IBLOCK=y
 CONFIG_TCM_FILEIO=y
 CONFIG_NETDEVICES=y
+CONFIG_BONDING=m
 CONFIG_DUMMY=m
 CONFIG_WIREGUARD=m
 CONFIG_MACVLAN=y
 CONFIG_IPVLAN=y
 CONFIG_VXLAN=y
+CONFIG_AMT=m
+CONFIG_MACSEC=m
 CONFIG_VETH=y
 CONFIG_VIRTIO_NET=y
 # CONFIG_NET_VENDOR_ALACRITECH is not set
@@ -667,6 +669,12 @@ CONFIG_WATCHDOG=y
 CONFIG_SPACEMIT_WATCHDOG=y
 CONFIG_MFD_SPACEMIT_PMIC=y
 CONFIG_REGULATOR=y
+CONFIG_REGULATOR_USERSPACE_CONSUMER=m
+CONFIG_REGULATOR_FAN53555=m
+CONFIG_REGULATOR_FAN53880=m
+CONFIG_REGULATOR_GPIO=m
+CONFIG_REGULATOR_PWM=m
+CONFIG_REGULATOR_VCTRL=m
 CONFIG_REGULATOR_SPACEMIT=y
 # CONFIG_MEDIA_CEC_SUPPORT is not set
 CONFIG_MEDIA_SUPPORT=y
