--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -23,7 +23,7 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_PERF=y
 CONFIG_CGROUP_BPF=y
 CONFIG_CGROUP_MISC=y
-CONFIG_CGROUP_DEBUG=y
+# CONFIG_CGROUP_DEBUG= is not set
 CONFIG_NAMESPACES=y
 CONFIG_USER_NS=y
 CONFIG_CHECKPOINT_RESTORE=y
@@ -67,7 +67,7 @@ CONFIG_ZSMALLOC_STAT=y
 CONFIG_SHUFFLE_PAGE_ALLOCATOR=y
 CONFIG_PAGE_REPORTING=y
 CONFIG_CMA=y
-CONFIG_CMA_DEBUGFS=y
+# CONFIG_CMA_DEBUGFS= is not set
 CONFIG_CMA_SYSFS=y
 CONFIG_NET=y
 CONFIG_PACKET=y
