defconfig: k1_defconfig: Add more `CONFIG_CPU_FREQ_GOV`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -23,7 +23,6 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_PERF=y
 CONFIG_CGROUP_BPF=y
 CONFIG_CGROUP_MISC=y
-# CONFIG_CGROUP_DEBUG= is not set
 CONFIG_NAMESPACES=y
 CONFIG_USER_NS=y
 CONFIG_CHECKPOINT_RESTORE=y
@@ -40,8 +39,13 @@ CONFIG_RISCV_SBI_V01=y
 # CONFIG_RISCV_BOOT_SPINWAIT is not set
 CONFIG_IMAGE_LOAD_OFFSET=0x1400000
 CONFIG_CPU_IDLE=y
+CONFIG_RISCV_SBI_CPUIDLE=y
 CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_SPACEMIT_K1X_CPUFREQ=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=m
@@ -67,7 +71,6 @@ CONFIG_ZSMALLOC_STAT=y
 CONFIG_SHUFFLE_PAGE_ALLOCATOR=y
 CONFIG_PAGE_REPORTING=y
 CONFIG_CMA=y
-# CONFIG_CMA_DEBUGFS= is not set
 CONFIG_CMA_SYSFS=y
 CONFIG_NET=y
 CONFIG_PACKET=y
