--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -632,8 +632,41 @@ CONFIG_SERIAL_EARLYCON_RISCV_SBI=y
 CONFIG_SERIAL_PXA=y
 CONFIG_SERIAL_PXA_SPACEMIT_K1X=y
 CONFIG_SERIAL_PXA_CONSOLE=y
+CONFIG_SERIAL_SIFIVE=m
+CONFIG_HVC_RISCV_SBI=y
+CONFIG_RPMSG_TTY=m
 CONFIG_SERIAL_DEV_BUS=y
 CONFIG_VIRTIO_CONSOLE=y
+CONFIG_HW_RANDOM=y
+CONFIG_HW_RANDOM_ATMEL=m
+CONFIG_HW_RANDOM_BCM2835=m
+CONFIG_HW_RANDOM_IPROC_RNG200=m
+CONFIG_HW_RANDOM_IXP4XX=m
+CONFIG_HW_RANDOM_OMAP=m
+CONFIG_HW_RANDOM_OMAP3_ROM=m
+CONFIG_HW_RANDOM_IMX_RNGC=m
+CONFIG_HW_RANDOM_NOMADIK=m
+CONFIG_HW_RANDOM_STM32=m
+CONFIG_HW_RANDOM_MESON=m
+CONFIG_HW_RANDOM_MTK=m
+CONFIG_HW_RANDOM_EXYNOS=m
+CONFIG_HW_RANDOM_NPCM=m
+CONFIG_HW_RANDOM_KEYSTONE=m
+CONFIG_HW_RANDOM_CN10K=m
+CONFIG_TCG_TPM=m
+CONFIG_TCG_TIS=m
+CONFIG_TCG_TIS_SPI=m
+CONFIG_TCG_TIS_SPI_CR50=y
+CONFIG_TCG_TIS_I2C=m
+CONFIG_TCG_TIS_SYNQUACER=m
+CONFIG_TCG_TIS_I2C_CR50=m
+CONFIG_TCG_TIS_I2C_ATMEL=m
+CONFIG_TCG_TIS_I2C_INFINEON=m
+CONFIG_TCG_TIS_I2C_NUVOTON=m
+CONFIG_TCG_ATMEL=m
+CONFIG_TCG_VTPM_PROXY=m
+CONFIG_TCG_TIS_ST33ZP24_I2C=m
+CONFIG_TCG_TIS_ST33ZP24_SPI=m
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_SPACEMIT_K1X=y
 CONFIG_I2C_SLAVE=y
