defconfig: k1_defconfig: `# CONFIG_GCOV_KERNEL= is not set`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -49,7 +49,7 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_SPACEMIT_K1X_CPUFREQ=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=m
-CONFIG_GCOV_KERNEL=y
+# CONFIG_GCOV_KERNEL= is not set
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_COMPRESS_XZ=y
