defconfig: k1_defconfig: `CONFIG_SPACEMIT_K1X_TIMER=y`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -987,6 +987,7 @@ CONFIG_DMABUF_HEAPS_CMA=y
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_VHOST_MENU is not set
 CONFIG_SPACEMIT_K1X_CCU=y
+CONFIG_SPACEMIT_K1X_TIMER=y
 CONFIG_MAILBOX=y
 CONFIG_SPACEMIT_MAILBOX=y
 CONFIG_K1X_MAILBOX=y
