--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -49,7 +49,6 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_SPACEMIT_K1X_CPUFREQ=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=m
-# CONFIG_GCOV_KERNEL= is not set
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_SIG=y
@@ -610,16 +609,12 @@ CONFIG_USB_NET_QMI_WWAN=m
 # CONFIG_WLAN_VENDOR_PURELIFI is not set
 # CONFIG_WLAN_VENDOR_RALINK is not set
 CONFIG_RTL8852BS=m
-CONFIG_RTL8852BE=m
 # CONFIG_WLAN_VENDOR_RSI is not set
 # CONFIG_WLAN_VENDOR_SILABS is not set
 # CONFIG_WLAN_VENDOR_ST is not set
 # CONFIG_WLAN_VENDOR_TI is not set
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
 # CONFIG_WLAN_VENDOR_QUANTENNA is not set
-CONFIG_AIC_WLAN_SUPPORT=y
-CONFIG_AIC8800_WLAN_SUPPORT=m
-CONFIG_AIC_LOADFW_SUPPORT=m
 CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_KEYBOARD is not set
 # CONFIG_INPUT_MOUSE is not set
@@ -629,6 +624,7 @@ CONFIG_TOUCHSCREEN_GOODIX=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_SPACEMIT_POWERKEY=y
+# CONFIG_LEGACY_PTYS is not set
 CONFIG_SERIAL_EARLYCON_RISCV_SBI=y
 CONFIG_SERIAL_PXA=y
 CONFIG_SERIAL_PXA_SPACEMIT_K1X=y
@@ -637,24 +633,25 @@ CONFIG_SERIAL_SIFIVE=m
 CONFIG_HVC_RISCV_SBI=y
 CONFIG_RPMSG_TTY=m
 CONFIG_SERIAL_DEV_BUS=y
-CONFIG_VIRTIO_CONSOLE=y
+CONFIG_VIRTIO_CONSOLE=m
 CONFIG_HW_RANDOM=y
-CONFIG_HW_RANDOM_ATMEL=m
-CONFIG_HW_RANDOM_BCM2835=m
-CONFIG_HW_RANDOM_IPROC_RNG200=m
-CONFIG_HW_RANDOM_IXP4XX=m
-CONFIG_HW_RANDOM_OMAP=m
-CONFIG_HW_RANDOM_OMAP3_ROM=m
-CONFIG_HW_RANDOM_IMX_RNGC=m
-CONFIG_HW_RANDOM_NOMADIK=m
-CONFIG_HW_RANDOM_STM32=m
-CONFIG_HW_RANDOM_MESON=m
-CONFIG_HW_RANDOM_MTK=m
-CONFIG_HW_RANDOM_EXYNOS=m
-CONFIG_HW_RANDOM_NPCM=m
-CONFIG_HW_RANDOM_KEYSTONE=m
-CONFIG_HW_RANDOM_CN10K=m
-CONFIG_TCG_TPM=m
+CONFIG_HW_RANDOM_TIMERIOMEM=y
+# CONFIG_HW_RANDOM_ATMEL is not set
+# CONFIG_HW_RANDOM_BCM2835 is not set
+# CONFIG_HW_RANDOM_IPROC_RNG200 is not set
+# CONFIG_HW_RANDOM_IXP4XX is not set
+# CONFIG_HW_RANDOM_OMAP is not set
+# CONFIG_HW_RANDOM_OMAP3_ROM is not set
+# CONFIG_HW_RANDOM_IMX_RNGC is not set
+# CONFIG_HW_RANDOM_NOMADIK is not set
+# CONFIG_HW_RANDOM_STM32 is not set
+# CONFIG_HW_RANDOM_MESON is not set
+# CONFIG_HW_RANDOM_MTK is not set
+# CONFIG_HW_RANDOM_EXYNOS is not set
+# CONFIG_HW_RANDOM_NPCM is not set
+# CONFIG_HW_RANDOM_KEYSTONE is not set
+# CONFIG_HW_RANDOM_CN10K is not set
+CONFIG_TCG_TPM=y
 CONFIG_TCG_TIS=m
 CONFIG_TCG_TIS_SPI=m
 CONFIG_TCG_TIS_SPI_CR50=y
@@ -669,7 +666,17 @@ CONFIG_TCG_VTPM_PROXY=m
 CONFIG_TCG_TIS_ST33ZP24_I2C=m
 CONFIG_TCG_TIS_ST33ZP24_SPI=m
 CONFIG_I2C_CHARDEV=y
+CONFIG_I2C_MUX=y
+CONFIG_I2C_ARB_GPIO_CHALLENGE=y
+CONFIG_I2C_MUX_GPIO=y
+CONFIG_I2C_MUX_GPMUX=y
+CONFIG_I2C_MUX_PINCTRL=y
+CONFIG_I2C_MUX_REG=y
+CONFIG_I2C_DEMUX_PINCTRL=y
 CONFIG_I2C_SPACEMIT_K1X=y
+CONFIG_I2C_GPIO=m
+CONFIG_I2C_GPIO_FAULT_INJECTOR=y
+CONFIG_I2C_TINY_USB=m
 CONFIG_I2C_SLAVE=y
 CONFIG_I2C_SLAVE_EEPROM=y
 CONFIG_SPI=y
@@ -679,6 +686,8 @@ CONFIG_PTP_1588_CLOCK_IDTCM=y
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_SPACEMIT_PMIC=y
 CONFIG_PINCTRL_SINGLE=y
+# CONFIG_PINCTRL_MESON is not set
+# CONFIG_PINCTRL_UNIPHIER is not set
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_K1X=y
 CONFIG_POWER_RESET=y
@@ -703,6 +712,7 @@ CONFIG_SENSORS_TC74=m
 CONFIG_CPU_THERMAL=y
 CONFIG_K1X_THERMAL=y
 CONFIG_WATCHDOG=y
+CONFIG_SOFT_WATCHDOG=m
 CONFIG_SPACEMIT_WATCHDOG=y
 CONFIG_MFD_SPACEMIT_PMIC=y
 CONFIG_REGULATOR=y
@@ -1069,7 +1079,6 @@ CONFIG_SECURITY=y
 CONFIG_SECURITY_APPARMOR=y
 CONFIG_LSM="landlock,lockdown,yama,loadpin,safesetid,integrity,bpf"
 CONFIG_INIT_STACK_NONE=y
-CONFIG_CRYPTO_DH=y
 CONFIG_CRYPTO_CURVE25519=y
 CONFIG_CRYPTO_DES=y
 CONFIG_CRYPTO_OFB=y
