--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -534,7 +534,7 @@ CONFIG_DM_VERITY_FEC=y
 CONFIG_DM_SWITCH=y
 CONFIG_DM_LOG_WRITES=y
 CONFIG_DM_INTEGRITY=y
-CONFIG_TARGET_CORE=y
+# CONFIG_TARGET_CORE= is not set
 CONFIG_TCM_IBLOCK=y
 CONFIG_TCM_FILEIO=y
 CONFIG_NETDEVICES=y
