--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -892,6 +892,7 @@ CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_SPACEMIT=y
+CONFIG_SND_SOC_ES8316=y
 CONFIG_SND_SOC_ES8326=y
 CONFIG_SND_SIMPLE_CARD=y
 CONFIG_UHID=y
