BananaPi F3: reflect change: https://github.com/pyavitz/debian-image-builder/commit/3aadc442ca374b73c38ef4208d56e2b59d3e9044
https://lore.kernel.org/linux-riscv/20240618-hardwood-footrest-ab5ec5bce3cf@wendy/T/#t

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/patches/overlays/riscv/Makefile
+++ b/patches/overlays/riscv/Makefile
@@ -1,7 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0
 dtbo-$(CONFIG_ARCH_RV64I) += \
-	keystone-k1-pwm-backlight.dtbo \
-	keystone-k1-qspi.dtbo
+	k1-pwm-backlight.dtbo \
+	k1-qspi.dtbo
 
 targets += dtbs dtbs_install
 targets += $(dtbo-y)
