BananaPi F3: `bring up to linux 6.1.95`
patrick@bpif3:~$ uname -a
Linux bpif3 6.1.95 #1 SMP Sat Jun 22 14:52:26 EDT 2024 riscv64 GNU/Linux
patrick@bpif3:~$ lsblk
NAME         MAJ:MIN RM   SIZE RO TYPE MOUNTPOINTS
mmcblk0      179:0    0  29.7G  0 disk
└─mmcblk0p1  179:1    0  29.6G  0 part /
mmcblk2      179:8    0  14.6G  0 disk
└─mmcblk2p1  179:9    0  14.5G  0 part
mmcblk2boot0 179:16   0     4M  1 disk
mmcblk2boot1 179:24   0     4M  1 disk
zram0        250:0    0     1G  0 disk [SWAP]
nvme0n1      259:0    0 238.5G  0 disk
├─nvme0n1p1  259:1    0   412M  0 part
└─nvme0n1p2  259:2    0   238G  0 part

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -16,7 +16,6 @@ CONFIG_RT_GROUP_SCHED=y
 CONFIG_CGROUP_PIDS=y
 CONFIG_CGROUP_RDMA=y
 CONFIG_CGROUP_FREEZER=y
-CONFIG_CGROUP_HUGETLB=y
 CONFIG_CPUSETS=y
 CONFIG_CGROUP_DEVICE=y
 CONFIG_CGROUP_CPUACCT=y
@@ -27,9 +26,9 @@ CONFIG_NAMESPACES=y
 CONFIG_USER_NS=y
 CONFIG_CHECKPOINT_RESTORE=y
 CONFIG_BOOT_CONFIG=y
-CONFIG_EXPERT=y
 # CONFIG_BUG is not set
 CONFIG_KALLSYMS_ALL=y
+CONFIG_EMBEDDED=y
 CONFIG_PERF_EVENTS=y
 CONFIG_SOC_SPACEMIT=y
 CONFIG_SOC_SPACEMIT_K1X=y
@@ -49,6 +48,7 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_SPACEMIT_K1X_CPUFREQ=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=m
+# CONFIG_VMAP_STACK is not set
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_SIG=y
@@ -534,9 +534,6 @@ CONFIG_DM_VERITY_FEC=y
 CONFIG_DM_SWITCH=y
 CONFIG_DM_LOG_WRITES=y
 CONFIG_DM_INTEGRITY=y
-# CONFIG_TARGET_CORE= is not set
-CONFIG_TCM_IBLOCK=y
-CONFIG_TCM_FILEIO=y
 CONFIG_NETDEVICES=y
 CONFIG_BONDING=m
 CONFIG_DUMMY=m
@@ -564,7 +561,6 @@ CONFIG_VIRTIO_NET=y
 # CONFIG_NET_VENDOR_GOOGLE is not set
 # CONFIG_NET_VENDOR_HUAWEI is not set
 # CONFIG_NET_VENDOR_INTEL is not set
-# CONFIG_NET_VENDOR_WANGXUN is not set
 # CONFIG_NET_VENDOR_LITEX is not set
 # CONFIG_NET_VENDOR_MARVELL is not set
 # CONFIG_NET_VENDOR_MICREL is not set
@@ -588,6 +584,7 @@ CONFIG_K1X_EMAC=y
 # CONFIG_NET_VENDOR_SYNOPSYS is not set
 # CONFIG_NET_VENDOR_VERTEXCOM is not set
 # CONFIG_NET_VENDOR_VIA is not set
+# CONFIG_NET_VENDOR_WANGXUN is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
 # CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_REALTEK_PHY=y
@@ -969,7 +966,6 @@ CONFIG_USB_CONFIGFS_RNDIS=y
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
 CONFIG_USB_CONFIGFS_F_FS=y
 CONFIG_USB_CONFIGFS_F_UVC=y
-CONFIG_USB_CONFIGFS_F_TCM=y
 CONFIG_MMC=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
@@ -997,8 +993,10 @@ CONFIG_DMABUF_HEAPS_SYSTEM=y
 CONFIG_DMABUF_HEAPS_CMA=y
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_VHOST_MENU is not set
+# CONFIG_SURFACE_PLATFORMS is not set
+# CONFIG_CLK_SUNXI is not set
 CONFIG_SPACEMIT_K1X_CCU=y
-# CONFIG_SPACEMIT_K1X_TIMER= is not set
+CONFIG_SPACEMIT_K1X_TIMER=y
 CONFIG_MAILBOX=y
 CONFIG_SPACEMIT_MAILBOX=y
 CONFIG_K1X_MAILBOX=y
@@ -1012,11 +1010,23 @@ CONFIG_SPACEMI_K1X_DMA_RANGE=y
 CONFIG_CHIP_MEDIA_JPU=y
 CONFIG_SPACEMIT_V2D=y
 CONFIG_SPACEMIT_RFKILL=y
+CONFIG_MEMORY=y
+# CONFIG_TEGRA_MC is not set
 CONFIG_PWM=y
+CONFIG_PWM_DWC=y
+CONFIG_PWM_SIFIVE=y
 CONFIG_RESET_CONTROLLER=y
+# CONFIG_RESET_RASPBERRYPI is not set
 # CONFIG_RESET_SCMI is not set
+CONFIG_RESET_SIMPLE=y
+CONFIG_RESET_STARFIVE_JH7100=y
 CONFIG_RESET_K1X_SPACEMIT=y
 # CONFIG_RESET_K1MATRIX_SPACEMIT is not set
+# CONFIG_PHY_EXYNOS5_USBDRD is not set
+CONFIG_LIBNVDIMM=y
+CONFIG_NVMEM_RMEM=y
+CONFIG_NVMEM_SNVS_LPGPR=y
+CONFIG_NVMEM_U_BOOT_ENV=y
 CONFIG_VALIDATE_FS_PARSER=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
@@ -1033,7 +1043,6 @@ CONFIG_F2FS_FS=y
 CONFIG_F2FS_CHECK_FS=y
 CONFIG_FANOTIFY=y
 CONFIG_AUTOFS4_FS=y
-CONFIG_AUTOFS_FS=y
 CONFIG_FUSE_FS=m
 CONFIG_OVERLAY_FS=y
 CONFIG_NETFS_STATS=y
@@ -1051,6 +1060,7 @@ CONFIG_NTFS_FS=m
 CONFIG_NTFS_RW=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
+# CONFIG_EFIVAR_FS is not set
 CONFIG_HFS_FS=m
 CONFIG_HFSPLUS_FS=m
 CONFIG_SQUASHFS=y
