--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -688,7 +688,9 @@ CONFIG_PINCTRL_SINGLE=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_K1X=y
 CONFIG_POWER_RESET=y
-CONFIG_POWER_RESET_KEYSTONE=y
+CONFIG_POWER_RESET_GPIO=y
+CONFIG_POWER_RESET_GPIO_RESTART=y
+CONFIG_POWER_RESET_REGULATOR=y
 CONFIG_POWER_SUPPLY=y
 CONFIG_SENSORS_DRIVETEMP=m
 CONFIG_SENSORS_GPIO_FAN=y
@@ -711,6 +713,7 @@ CONFIG_K1X_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_SOFT_WATCHDOG=m
 CONFIG_SPACEMIT_WATCHDOG=y
+CONFIG_MFD_SYSCON=y
 CONFIG_MFD_SPACEMIT_PMIC=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_USERSPACE_CONSUMER=m
@@ -986,11 +989,17 @@ CONFIG_MMP_PDMA_DRIVER=y
 CONFIG_MMP_PDMA_SPACEMIT_K1X=y
 CONFIG_ADMA_SPACEMIT_K1X=y
 CONFIG_USERSPACE_DMA=y
+# CONFIG_SH_DMAE_BASE is not set
+# CONFIG_TI_EDMA is not set
+# CONFIG_DMA_OMAP is not set
 CONFIG_SW_SYNC=y
 CONFIG_UDMABUF=y
 CONFIG_DMABUF_HEAPS=y
 CONFIG_DMABUF_HEAPS_SYSTEM=y
 CONFIG_DMABUF_HEAPS_CMA=y
+CONFIG_UIO=y
+CONFIG_UIO_PDRV_GENIRQ=y
+CONFIG_UIO_DMEM_GENIRQ=y
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_VHOST_MENU is not set
 # CONFIG_SURFACE_PLATFORMS is not set
@@ -1002,17 +1011,24 @@ CONFIG_SPACEMIT_MAILBOX=y
 CONFIG_K1X_MAILBOX=y
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_REMOTEPROC=y
+CONFIG_REMOTEPROC_CDEV=y
 CONFIG_K1X_REMOTEPROC=y
+CONFIG_RPMSG_CHAR=y
+CONFIG_RPMSG_CTRL=y
 CONFIG_RPMSG_VIRTIO=y
+# CONFIG_DPAA2_CONSOLE is not set
 CONFIG_SPACEMIT_PM_DOMAINS=y
 CONFIG_SPACEMIT_REBOOT_CONTROL=y
 CONFIG_SPACEMI_K1X_DMA_RANGE=y
 CONFIG_CHIP_MEDIA_JPU=y
 CONFIG_SPACEMIT_V2D=y
 CONFIG_SPACEMIT_RFKILL=y
+CONFIG_EXTCON_GPIO=y
+CONFIG_EXTCON_USB_GPIO=y
 CONFIG_MEMORY=y
 # CONFIG_TEGRA_MC is not set
 CONFIG_PWM=y
+CONFIG_PWM_CLK=y
 CONFIG_PWM_DWC=y
 CONFIG_PWM_SIFIVE=y
 CONFIG_RESET_CONTROLLER=y
@@ -1027,6 +1043,8 @@ CONFIG_LIBNVDIMM=y
 CONFIG_NVMEM_RMEM=y
 CONFIG_NVMEM_SNVS_LPGPR=y
 CONFIG_NVMEM_U_BOOT_ENV=y
+CONFIG_MUX_GPIO=y
+CONFIG_MUX_MMIO=y
 CONFIG_VALIDATE_FS_PARSER=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
