--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -687,6 +687,8 @@ CONFIG_PINCTRL_SINGLE=y
 # CONFIG_PINCTRL_UNIPHIER is not set
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_K1X=y
+CONFIG_GPIO_PCA953X=y
+CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
@@ -892,6 +894,8 @@ CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_SPACEMIT=y
+CONFIG_SND_SOC_ES7210=y
+CONFIG_SND_SOC_ES8156=y
 CONFIG_SND_SOC_ES8316=y
 CONFIG_SND_SOC_ES8326=y
 CONFIG_SND_SIMPLE_CARD=y
@@ -978,6 +982,7 @@ CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_TRIGGER_TIMER=y
 CONFIG_LEDS_TRIGGER_ONESHOT=y
+CONFIG_LEDS_TRIGGER_DISK=y
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
 CONFIG_LEDS_TRIGGER_BACKLIGHT=y
 CONFIG_LEDS_TRIGGER_GPIO=y
