defconfig: k1_defconfig: `misc additions`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -709,10 +709,22 @@ CONFIG_SENSORS_SCH5627=m
 CONFIG_SENSORS_SCH5636=m
 CONFIG_SENSORS_STTS751=m
 CONFIG_SENSORS_TC74=m
+CONFIG_THERMAL_NETLINK=y
+CONFIG_THERMAL_WRITABLE_TRIPS=y
+CONFIG_THERMAL_GOV_FAIR_SHARE=y
+CONFIG_THERMAL_GOV_BANG_BANG=y
+CONFIG_THERMAL_GOV_USER_SPACE=y
 CONFIG_CPU_THERMAL=y
+# CONFIG_MTK_THERMAL is not set
 CONFIG_K1X_THERMAL=y
 CONFIG_WATCHDOG=y
-CONFIG_SOFT_WATCHDOG=m
+CONFIG_WATCHDOG_SYSFS=y
+CONFIG_WATCHDOG_HRTIMER_PRETIMEOUT=y
+CONFIG_WATCHDOG_PRETIMEOUT_GOV=y
+CONFIG_SOFT_WATCHDOG=y
+CONFIG_SOFT_WATCHDOG_PRETIMEOUT=y
+CONFIG_GPIO_WATCHDOG=y
+CONFIG_GPIO_WATCHDOG_ARCH_INITCALL=y
 CONFIG_SPACEMIT_WATCHDOG=y
 CONFIG_MFD_SYSCON=y
 CONFIG_MFD_SPACEMIT_PMIC=y
@@ -889,6 +901,9 @@ CONFIG_FB=y
 CONFIG_BACKLIGHT_PWM=y
 # CONFIG_VGA_CONSOLE is not set
 CONFIG_FRAMEBUFFER_CONSOLE=y
+CONFIG_LOGO=y
+# CONFIG_LOGO_LINUX_MONO is not set
+# CONFIG_LOGO_LINUX_VGA16 is not set
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_SOC=y
