BananaPi F3: `update to v1.0.7`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/k1-6.1.15_defconfig
+++ b/defconfig/k1-6.1.15_defconfig
@@ -714,7 +714,7 @@ CONFIG_K1X_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_SOFT_WATCHDOG=m
 CONFIG_SPACEMIT_WATCHDOG=y
-CONFIG_MFD_SYSCON=y
+# CONFIG_MFD_SYSCON= is not set
 CONFIG_MFD_SPACEMIT_PMIC=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_USERSPACE_CONSUMER=m
@@ -1024,6 +1024,7 @@ CONFIG_RPMSG_VIRTIO=y
 CONFIG_SPACEMIT_PM_DOMAINS=y
 CONFIG_SPACEMIT_REBOOT_CONTROL=y
 CONFIG_SPACEMI_K1X_DMA_RANGE=y
+CONFIG_SPACEMI_SOCINFO=y
 CONFIG_CHIP_MEDIA_JPU=y
 CONFIG_SPACEMIT_V2D=y
 CONFIG_SPACEMIT_RFKILL=y
@@ -1047,6 +1048,7 @@ CONFIG_LIBNVDIMM=y
 CONFIG_NVMEM_RMEM=y
 CONFIG_NVMEM_SNVS_LPGPR=y
 CONFIG_NVMEM_U_BOOT_ENV=y
+CONFIG_NVMEM_SPACEMIT_EFUSE=y
 CONFIG_MUX_GPIO=y
 CONFIG_MUX_MMIO=y
 CONFIG_VALIDATE_FS_PARSER=y
