--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -726,7 +726,7 @@ CONFIG_SOFT_WATCHDOG_PRETIMEOUT=y
 CONFIG_GPIO_WATCHDOG=y
 CONFIG_GPIO_WATCHDOG_ARCH_INITCALL=y
 CONFIG_SPACEMIT_WATCHDOG=y
-CONFIG_MFD_SYSCON=y
+# CONFIG_MFD_SYSCON= is not set
 CONFIG_MFD_SPACEMIT_PMIC=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_USERSPACE_CONSUMER=m
@@ -1039,6 +1039,7 @@ CONFIG_RPMSG_VIRTIO=y
 CONFIG_SPACEMIT_PM_DOMAINS=y
 CONFIG_SPACEMIT_REBOOT_CONTROL=y
 CONFIG_SPACEMI_K1X_DMA_RANGE=y
+CONFIG_SPACEMI_SOCINFO=y
 CONFIG_CHIP_MEDIA_JPU=y
 CONFIG_SPACEMIT_V2D=y
 CONFIG_SPACEMIT_RFKILL=y
@@ -1062,6 +1063,7 @@ CONFIG_LIBNVDIMM=y
 CONFIG_NVMEM_RMEM=y
 CONFIG_NVMEM_SNVS_LPGPR=y
 CONFIG_NVMEM_U_BOOT_ENV=y
+CONFIG_NVMEM_SPACEMIT_EFUSE=y
 CONFIG_MUX_GPIO=y
 CONFIG_MUX_MMIO=y
 CONFIG_VALIDATE_FS_PARSER=y
